--- a/TilTakToe/MainWindow.xaml
+++ b/TilTakToe/MainWindow.xaml
@@ -1,12 +1,49 @@
-﻿<Window x:Class="TilTakToe.MainWindow"
+﻿<Window x:Name="StartWindow"
+        x:Class="TilTakToe.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TilTakToe"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="450" Width="400"
+        WindowStyle="None">
 
+    <Grid x:Name="MainGrid">
+        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Border x:Name="ButonsZoneBorder" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3" Background="#DDDDDD" MouseDown="MenuBorder_MouseDown"/>
+        <Border x:Name="GameFieldZoneBorder" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3"/>
+
+        <Border Grid.Column="0" Grid.Row="2" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Border Grid.Column="1" Grid.Row="2" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Border Grid.Column="2" Grid.Row="2" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Border Grid.Column="0" Grid.Row="3" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Border Grid.Column="1" Grid.Row="3" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Border Grid.Column="2" Grid.Row="3" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Border Grid.Column="0" Grid.Row="4" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Border Grid.Column="1" Grid.Row="4" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Border Grid.Column="2" Grid.Row="4" BorderBrush="Gray" BorderThickness="1" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+
+        <TextBlock x:Name="GameNameTextBlock" Grid.Column="0" Grid.Row="0" Text="TikTakToe" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="16" FontFamily="Consolas" Foreground="#FF4C4C4C" Margin="15,0,0,0" MouseDown="MenuBorder_MouseDown"/>
+        <TextBlock x:Name="GameCountTextBlock" Grid.Column="1" Grid.Row="0" Text="" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="18" FontFamily="Arial Black" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown"/>
+        <TextBlock x:Name="MessageTextBlock" Grid.Column="1" Grid.Row="1" Text="" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" FontWeight="Bold" MouseDown="MenuBorder_MouseDown"/>
+        <Button Name="ExitButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="x" Background="#FFDA4545" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="100,0,0,0" Click="ExitButon_Click"/>
+        <Button Name="MinimizeButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="_" Background="#FF457CDA" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="40,0,0,0" Click="MinimizeButon_Click"/>
+
+        <Button Name="MultiplayerButton" Grid.Column="0" Grid.Row="1" Content="Multiplayer" Background="#FF4C4C4C" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
+        <Button Name="SettingsButton" Grid.Column="3" Grid.Row="1" Content="Settings" Background="#FF4C4C4C" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
     </Grid>
 </Window>
