Refactoring, Created CellProcessing static class with 2 methods

--- a/TilTakToe/XAML/Windows/MainWindow.xaml
+++ b/TilTakToe/XAML/Windows/MainWindow.xaml
@@ -63,6 +63,6 @@
         <Image Grid.Column="2" Grid.Row="3" Margin="10" />
         <Image Grid.Column="0" Grid.Row="4" Margin="10" />
         <Image Grid.Column="1" Grid.Row="4" Margin="10" />
-        <Image Grid.Column="2" Grid.Row="4" Margin="10" Source="" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseLeftButtonDown="Border_MouseLeftButtonDown" MouseLeftButtonUp="Border_MouseLeftButtonUp"/>
+        <Image Grid.Column="2" Grid.Row="4" Margin="10" />
     </Grid>
 </Window>
