--- a/TilTakToe/XAML/Windows/MultiplayerMenu.xaml
+++ b/TilTakToe/XAML/Windows/MultiplayerMenu.xaml
@@ -42,7 +42,7 @@
         <Button Name="MinimizeButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="_"  Style="{StaticResource BlueButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="40,0,0,0" Click="MinimizeButon_Click"/>
         <TextBlock x:Name="MenuCaptionTextBlock" Grid.Column="1" Grid.Row="1" Text="Servers" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
 
-        <Button Name="SingleplayerButton"  Grid.Column="0" Grid.Row="1" Content="Singleplayer" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
+        <Button Name="SingleplayerButton"  Grid.Column="0" Grid.Row="1" Content="Singleplayer" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="SingleplayerButton_Click"/>
         <Button Name="CreateGameButton"  Grid.Column="2" Grid.Row="1" Content="Create" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
         
     </Grid>
