--- a/TilTakToe/XAML/Windows/CreateServerWindow.xaml
+++ b/TilTakToe/XAML/Windows/CreateServerWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Name="MultiplayerWindow"
-        x:Class="TilTakToe.XAML.Windows.MultiplayerMenu"
+﻿<Window x:Name="createServerWindow"
+        x:Class="TilTakToe.XAML.Windows.CreateServerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TilTakToe.XAML.Windows"
         mc:Ignorable="d"
-        Title="MultiplayerMenu" Height="450" Width="400"
+        Title="CreateServerWindow" Height="450" Width="400"
         WindowStyle="None">
 
     <Window.Resources>
@@ -16,7 +16,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -29,21 +29,17 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
         </Grid.RowDefinitions>
 
+
         <Border x:Name="ButonsZoneBorder" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3" Background="#DDDDDD" MouseDown="MenuBorder_MouseDown"/>
-        <Border x:Name="GamesListBorder" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3"/>
+        <Border x:Name="ServerCreation" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3"/>
 
         <TextBlock x:Name="GameNameTextBlock" Grid.Column="0" Grid.Row="0" Text="TikTakToe" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="16" FontFamily="Consolas" Foreground="#FF4C4C4C" Margin="15,0,0,0" MouseDown="MenuBorder_MouseDown"/>
         <Button Name="ExitButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="x" Style="{StaticResource RedButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="100,0,0,0" Click="ExitButon_Click"/>
         <Button Name="MinimizeButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="_"  Style="{StaticResource BlueButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="40,0,0,0" Click="MinimizeButon_Click"/>
-        <TextBlock x:Name="MenuCaptionTextBlock" Grid.Column="1" Grid.Row="1" Text="Servers" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
 
-        <Button Name="SingleplayerButton"  Grid.Column="0" Grid.Row="1" Content="Singleplayer" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="SingleplayerButton_Click"/>
-        <Button Name="CreateGameButton"  Grid.Column="2" Grid.Row="1" Content="Create" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="CreateGameButton_Click"/>
-        
+        <Button Name="BackButton"  Grid.Column="0" Grid.Row="1" Content="Back" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="BackButton_Click"/>
+        <Button Name="Create" Grid.Column="3" Grid.Row="1" Content="Create"  Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
     </Grid>
 </Window>
