--- a/TilTakToe/XAML/Windows/CreateServerWindow.xaml
+++ b/TilTakToe/XAML/Windows/CreateServerWindow.xaml
@@ -40,6 +40,6 @@
         <Button Name="MinimizeButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="_"  Style="{StaticResource BlueButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="40,0,0,0" Click="MinimizeButon_Click"/>
 
         <Button Name="BackButton"  Grid.Column="0" Grid.Row="1" Content="Back" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="BackButton_Click"/>
-        <Button Name="Create" Grid.Column="3" Grid.Row="1" Content="Create"  Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
+        <Button Name="Create" Grid.Column="3" Grid.Row="1" Content="Create"  Style="{StaticResource GreenButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
     </Grid>
 </Window>
