--- a/TilTakToe/XAML/Windows/CreateServerWindow.xaml
+++ b/TilTakToe/XAML/Windows/CreateServerWindow.xaml
@@ -29,17 +29,20 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
-
         <Border x:Name="ButonsZoneBorder" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3" Background="#DDDDDD" MouseDown="MenuBorder_MouseDown"/>
-        <Border x:Name="ServerCreation" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3"/>
+        <Border x:Name="ServerCreation" Grid.Row="2" Grid.RowSpan="4" Grid.Column="0" Grid.ColumnSpan="3" Background="White" MouseDown="MenuBorder_MouseDown"/>
 
-        <TextBlock x:Name="GameNameTextBlock" Grid.Column="0" Grid.Row="0" Text="TikTakToe" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="16" FontFamily="Consolas" Foreground="#FF4C4C4C" Margin="15,0,0,0" MouseDown="MenuBorder_MouseDown"/>
+        <TextBlock x:Name="GameNameTextBlock" Grid.Column="0" Grid.Row="0" Text="TikTakToe" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="16" FontFamily="Consolas" Foreground="#FF4C4C4C" Margin="15,0,0,0"/>
         <Button Name="ExitButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="x" Style="{StaticResource RedButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="100,0,0,0" Click="ExitButon_Click"/>
         <Button Name="MinimizeButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="_"  Style="{StaticResource BlueButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="40,0,0,0" Click="MinimizeButon_Click"/>
 
         <Button Name="BackButton"  Grid.Column="0" Grid.Row="1" Content="Back" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="BackButton_Click"/>
-        <Button Name="Create" Grid.Column="3" Grid.Row="1" Content="Create"  Style="{StaticResource GreenButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
+        <Button Name="Create" Grid.Column="3" Grid.Row="1" Content="Create"  Style="{StaticResource GreenButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="Create_Click"/>
+
+        <TextBlock x:Name="ServerNameTextBlock" Grid.Column="0" Grid.Row="2" Text=" Server Name" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown"/>
+        <TextBox x:Name="ServerNameTextBox" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Width="246" Height="30" />
     </Grid>
 </Window>
