--- a/TilTakToe/XAML/Windows/MultiplayerMenu.xaml
+++ b/TilTakToe/XAML/Windows/MultiplayerMenu.xaml
@@ -35,7 +35,7 @@
         </Grid.RowDefinitions>
 
         <Border x:Name="ButonsZoneBorder" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3" Background="#DDDDDD" MouseDown="MenuBorder_MouseDown"/>
-        <Border x:Name="GamesListBorder" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3"/>
+        <Border x:Name="GamesListBorder" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3" Background="White" MouseDown="MenuBorder_MouseDown"/>
 
         <TextBlock x:Name="GameNameTextBlock" Grid.Column="0" Grid.Row="0" Text="TikTakToe" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="16" FontFamily="Consolas" Foreground="#FF4C4C4C" Margin="15,0,0,0" MouseDown="MenuBorder_MouseDown"/>
         <Button Name="ExitButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="x" Style="{StaticResource RedButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="100,0,0,0" Click="ExitButon_Click"/>
@@ -44,6 +44,8 @@
 
         <Button Name="SingleplayerButton"  Grid.Column="0" Grid.Row="1" Content="Singleplayer" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="SingleplayerButton_Click"/>
         <Button Name="CreateGameButton"  Grid.Column="2" Grid.Row="1" Content="Create" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="CreateGameButton_Click"/>
-        
+
+        <TextBlock x:Name="ClientReceive" Grid.Column="1" Grid.Row="2" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+
     </Grid>
 </Window>
