--- a/TilTakToe/App.xaml
+++ b/TilTakToe/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TilTakToe"
-             StartupUri="XAML/Windows/CreateServerWindow.xaml">
+             StartupUri="XAML/Windows/MainWindow.xaml">
     <Application.Resources>
     </Application.Resources>
 </Application>
