--- a/TilTakToe/XAML/Windows/MultiplayerMenu.xaml
+++ b/TilTakToe/XAML/Windows/MultiplayerMenu.xaml
@@ -17,7 +17,7 @@
         </ResourceDictionary>
     </Window.Resources>
     
-    <Grid>
+    <Grid x:Name="MultiplayerMenuGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -26,7 +26,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition Height="50"/>
-            <RowDefinition/>
+            <RowDefinition Height="30"/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -45,7 +45,10 @@
         <Button Name="SingleplayerButton"  Grid.Column="0" Grid.Row="1" Content="Singleplayer" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="SingleplayerButton_Click"/>
         <Button Name="CreateGameButton"  Grid.Column="2" Grid.Row="1" Content="Create" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="CreateGameButton_Click"/>
 
-        <TextBlock x:Name="ClientReceive" Grid.Column="1" Grid.Row="2" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+        <TextBlock x:Name="ServerNameColumnTextBox" Grid.Column="0" Grid.Row="2" Text="Name" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontWeight="Bold"/>
+        <TextBlock x:Name="ServerIpColumnTextBox" Grid.Column="1" Grid.Row="2" Text="Ip" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontWeight="Bold"/>
+        <TextBlock x:Name="ServerNameFromServerTextBox" Grid.Column="0" Grid.Row="3" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+        <TextBlock x:Name="IpFromServerTextBox" Grid.Column="1" Grid.Row="3" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
 
     </Grid>
 </Window>
