--- a/TilTakToe/XAML/Windows/MainWindow.xaml
+++ b/TilTakToe/XAML/Windows/MainWindow.xaml
@@ -7,7 +7,9 @@
         xmlns:local="clr-namespace:TilTakToe"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="400"
-        WindowStyle="None">
+        WindowStyle="None"
+        WindowStartupLocation="CenterScreen"
+        WindowState="Normal">
 
     <Window.Resources>
         <ResourceDictionary>
