--- a/TilTakToe/App.xaml
+++ b/TilTakToe/App.xaml
@@ -1,8 +1,5 @@
 ﻿<Application x:Class="TilTakToe.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TilTakToe"
-             StartupUri="XAML/Windows/MainWindow.xaml">
-    <Application.Resources>
-    </Application.Resources>
+             StartupUri="XAML/Windows/StartWindow.xaml">
 </Application>
