--- a/TilTakToe/XAML/Windows/CreateServerWindow.xaml
+++ b/TilTakToe/XAML/Windows/CreateServerWindow.xaml
@@ -4,9 +4,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TilTakToe.XAML.Windows"
         mc:Ignorable="d"
-        Title="CreateServerWindow" Height="450" Width="400"
+        Height="450" Width="400"
         WindowStyle="None">
 
     <Window.Resources>
