--- a/TilTakToe/XAML/Windows/MultiplayerGameWindow.xaml
+++ b/TilTakToe/XAML/Windows/MultiplayerGameWindow.xaml
@@ -1,14 +1,12 @@
-﻿<Window x:Name="StartWindow"
-        x:Class="TilTakToe.MainWindow"
+﻿<Window x:Name="multiplayerGameWindow"
+        x:Class="TilTakToe.XAML.Windows.MultiplayerGameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TilTakToe"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="400"
+        Height="450" Width="400"
         WindowStyle="None"
-        WindowStartupLocation="CenterScreen"
         WindowState="Normal">
 
     <Window.Resources>
@@ -18,9 +16,9 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
-    
+
     <Grid x:Name="MainGrid">
-        
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -34,7 +32,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        
+
         <Border x:Name="ButonsZoneBorder" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3" Background="#DDDDDD" MouseDown="MenuBorder_MouseDown"/>
         <Border x:Name="GameFieldZoneBorder" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3"/>
 
@@ -54,8 +52,7 @@
         <Button Name="ExitButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="x" Style="{StaticResource RedButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="100,0,0,0" Click="ExitButon_Click"/>
         <Button Name="MinimizeButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="_"  Style="{StaticResource BlueButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="40,0,0,0" Click="MinimizeButon_Click"/>
 
-        <Button Name="MultiplayerButton"  Grid.Column="0" Grid.Row="1" Content="Multiplayer" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="MultiplayerButton_Click"/>
-        <Button Name="SettingsButton" Grid.Column="3" Grid.Row="1" Content="Settings"  Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6"/>
+        <Button Name="ExitButton"  Grid.Column="0" Grid.Row="1" Content="Exit" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="ExitButton_Click" />
 
         <Image Grid.Column="0" Grid.Row="2" Margin="10" />
         <Image Grid.Column="1" Grid.Row="2" Margin="10" />
@@ -67,4 +64,5 @@
         <Image Grid.Column="1" Grid.Row="4" Margin="10" />
         <Image Grid.Column="2" Grid.Row="4" Margin="10" />
     </Grid>
+
 </Window>
