--- a/TilTakToe/XAML/Windows/MultiplayerWindow.xaml
+++ b/TilTakToe/XAML/Windows/MultiplayerWindow.xaml
@@ -1,14 +1,11 @@
-﻿<Window x:Name="MultiplayerWindow"
-        x:Class="TilTakToe.XAML.Windows.MultiplayerMenu"
+﻿<Window x:Name="multiplayerWindow"
+        x:Class="TilTakToe.XAML.Windows.MultiplayerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TilTakToe.XAML.Windows"
         mc:Ignorable="d"
-        Title="MultiplayerMenu"
-        Height="450"
-        Width="400"
+        Height="450" Width="400"
         WindowStyle="None">
 
     <Window.Resources>
