--- a/TilTakToe/XAML/Windows/MultiplayerGameWindow.xaml
+++ b/TilTakToe/XAML/Windows/MultiplayerGameWindow.xaml
@@ -17,7 +17,7 @@
         </ResourceDictionary>
     </Window.Resources>
 
-    <Grid x:Name="MainGrid">
+    <Grid x:Name="MainMultiplayerGrid">
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
