--- a/TilTakToe/XAML/Windows/LittleWindows/OpponentExitGameWondow.xaml
+++ b/TilTakToe/XAML/Windows/LittleWindows/OpponentExitGameWondow.xaml
@@ -1,11 +1,10 @@
-﻿<Window x:Name="areYouSureWindow"
-        x:Class="TilTakToe.XAML.Windows.AreYouSureWindow"
+﻿<Window x:Name="opponentExitGameWondow"
+        x:Class="TilTakToe.XAML.Windows.LittleWindows.OpponentExitGameWondow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="AreYouSureWindow"
         Height="150" Width="300"
         WindowStyle="None">
 
@@ -37,11 +36,10 @@
         <Button Name="ExitButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="x" Style="{StaticResource RedButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="65,3,10,2" Click="ExitButon_Click"/>
         <Button Name="MinimizeButon" Grid.Column="2" Width="25" Height="25" Content="_"  Style="{StaticResource BlueButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="35,3,40,2" Click="MinimizeButon_Click"/>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" FontFamily="Consolas" FontSize="16" HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Are you sure you want exit to main menu? This game will lost" VerticalAlignment="Stretch" TextAlignment="Center" FontWeight="Bold" MouseDown="MenuBorder_MouseDown" />
+        <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" FontFamily="Consolas" FontSize="16" HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Opponent Disconected" VerticalAlignment="Stretch" TextAlignment="Center" FontWeight="Bold" MouseDown="MenuBorder_MouseDown" />
 
-        <Button x:Name="YesButton" Content="Yes"  Style="{StaticResource RedButtonStyle}" Grid.ColumnSpan="2" Margin="23,59,65,21" Grid.Row="1" FontSize="18" />
-        <Button x:Name="NoButton" Content="No" Style="{StaticResource GrayButtonStyle}" Grid.ColumnSpan="2" Margin="65,60,23,22" Grid.Row="1" Grid.Column="1" FontSize="18" />
+        <Button x:Name="BackButton" Content="Back to main menu"  Style="{StaticResource GrayButtonStyle}" Grid.ColumnSpan="3"  Grid.Row="1" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Width="220" Click="BackButton_Click" />
 
     </Grid>
-    
+
 </Window>
