--- a/TilTakToe/XAML/Windows/MultiplayerGameWindow.xaml
+++ b/TilTakToe/XAML/Windows/MultiplayerGameWindow.xaml
@@ -52,7 +52,7 @@
         <Button Name="ExitButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="x" Style="{StaticResource RedButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="100,0,0,0" Click="ExitButon_Click"/>
         <Button Name="MinimizeButon" Grid.Column="2" Grid.Row="0" Width="25" Height="25" Content="_"  Style="{StaticResource BlueButtonStyle}" FontSize="16" FontFamily="Consolas" Margin="40,0,0,0" Click="MinimizeButon_Click"/>
 
-        <Button Name="ExitButton"  Grid.Column="0" Grid.Row="1" Content="Exit" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="ExitButton_Click" />
+        <Button Name="ExitButton"  Grid.Column="0" Grid.Row="1" Content="Exit" Style="{StaticResource GrayButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6,6,0,6" Click="ExitButton_Click" HorizontalAlignment="Left" Width="121" />
 
         <Image Grid.Column="0" Grid.Row="2" Margin="10" />
         <Image Grid.Column="1" Grid.Row="2" Margin="10" />
