--- a/TilTakToe/XAML/Windows/CreateServerWindow.xaml
+++ b/TilTakToe/XAML/Windows/CreateServerWindow.xaml
@@ -43,6 +43,6 @@
         <Button Name="Create" Grid.Column="3" Grid.Row="1" Content="Create"  Style="{StaticResource GreenButtonStyle}" Foreground="White" FontSize="16" FontFamily="Consolas" Margin="6" Click="Create_Click"/>
 
         <TextBlock x:Name="ServerNameTextBlock" Grid.Column="0" Grid.Row="2" Text=" Server Name" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" FontFamily="Consolas" Foreground="#FF4C4C4C" MouseDown="MenuBorder_MouseDown"/>
-        <TextBox x:Name="ServerNameTextBox" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Width="246" Height="30" />
+        <TextBox x:Name="ServerNameTextBox" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Width="246" Height="30" FontFamily="Consolas" FontSize="18" />
     </Grid>
 </Window>
