Solved problems with git

--- a/TilTakToe/XAML/Windows/LittleWindows/OpponentExitGameWindow.xaml
+++ b/TilTakToe/XAML/Windows/LittleWindows/OpponentExitGameWindow.xaml
@@ -1,5 +1,5 @@
-﻿<Window x:Name="opponentExitGameWondow"
-        x:Class="TilTakToe.XAML.Windows.LittleWindows.OpponentExitGameWondow"
+﻿<Window x:Name="opponentExitGameWindow"
+        x:Class="TilTakToe.XAML.Windows.LittleWindows.OpponentExitGameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
